[gd_scene load_steps=31 format=3 uid="uid://4wb6kebcw2jp"]

[ext_resource type="Script" path="res://Card.gd" id="1_3mc4s"]
[ext_resource type="Texture2D" uid="uid://maax6k5akclu" path="res://Assets/Cards.png" id="2_kqki1"]
[ext_resource type="AudioStream" uid="uid://ykeswybmhmp1" path="res://Assets/cards_untap.wav" id="3_wpjk7"]
[ext_resource type="AudioStream" uid="uid://8ikow017my60" path="res://Assets/cards_pass.wav" id="4_ntwny"]
[ext_resource type="AudioStream" uid="uid://c4foweyc2ms1l" path="res://Assets/cards_tap.wav" id="5_xyv3t"]

[sub_resource type="AtlasTexture" id="AtlasTexture_j5475"]
atlas = ExtResource("2_kqki1")
region = Rect2(0, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_371nm"]
atlas = ExtResource("2_kqki1")
region = Rect2(128, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xghpy"]
atlas = ExtResource("2_kqki1")
region = Rect2(96, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tlh3l"]
atlas = ExtResource("2_kqki1")
region = Rect2(64, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v2stj"]
atlas = ExtResource("2_kqki1")
region = Rect2(32, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dbdb2"]
atlas = ExtResource("2_kqki1")
region = Rect2(0, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_adnhx"]
atlas = ExtResource("2_kqki1")
region = Rect2(0, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v0p0o"]
atlas = ExtResource("2_kqki1")
region = Rect2(32, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ymoib"]
atlas = ExtResource("2_kqki1")
region = Rect2(64, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f27tl"]
atlas = ExtResource("2_kqki1")
region = Rect2(96, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2u50y"]
atlas = ExtResource("2_kqki1")
region = Rect2(128, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b2m7s"]
atlas = ExtResource("2_kqki1")
region = Rect2(0, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_retkc"]
atlas = ExtResource("2_kqki1")
region = Rect2(32, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ycgi6"]
atlas = ExtResource("2_kqki1")
region = Rect2(64, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j0j1t"]
atlas = ExtResource("2_kqki1")
region = Rect2(96, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ehc2"]
atlas = ExtResource("2_kqki1")
region = Rect2(128, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g0rb7"]
atlas = ExtResource("2_kqki1")
region = Rect2(0, 288, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_oplhs"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5475")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_371nm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xghpy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tlh3l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v2stj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dbdb2")
}],
"loop": false,
"name": &"deselect",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_adnhx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v0p0o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ymoib")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f27tl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2u50y")
}],
"loop": true,
"name": &"loop",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b2m7s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_retkc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ycgi6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j0j1t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ehc2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g0rb7")
}],
"loop": false,
"name": &"select",
"speed": 15.0
}]

[sub_resource type="Animation" id="Animation_q3h8r"]
resource_name = "deselect"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.287175, 1),
"update": 0,
"values": [0.785398, 0.0]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("3_wpjk7")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_4y2gr"]
resource_name = "discard"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 0.965936),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.8, 0.3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(4, -5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:skew")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.785398]
}

[sub_resource type="Animation" id="Animation_havpu"]
resource_name = "fade_frame_in"
length = 1.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Frame:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.9, 1.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.282353), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_baii2"]
resource_name = "move_to"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0)]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("4_ntwny")
}],
"times": PackedFloat32Array(0.3)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_t210r"]
resource_name = "select"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 2.37841),
"update": 0,
"values": [0.0, 0.785398]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("5_xyv3t")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wlgr8"]
_data = {
"deselect": SubResource("Animation_q3h8r"),
"discard": SubResource("Animation_4y2gr"),
"fade_frame_in": SubResource("Animation_havpu"),
"move_to": SubResource("Animation_baii2"),
"select": SubResource("Animation_t210r")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ir628"]

[node name="Card" type="Container"]
texture_filter = 1
script = ExtResource("1_3mc4s")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="Frame" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_oplhs")
animation = &"select"
offset = Vector2(1, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wlgr8")
}

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_ir628")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[connection signal="animation_finished" from="Frame" to="." method="_on_frame_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="input_event" from="Area2D" to="." method="_on_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
